# QuickJS-SourceInsight

./: .gitignore  CMakeLists.txt  hello.js  tutorial.cxx
doc/: atom_hash1.dot  atom_hash2.dot  parse_state.dot  parse_state_init.dot  parse_string.dot  source_code.dot  source_wide.dot  str_pool_free.dot  string_pool.dot
qjs-core/: CMakeLists.txt
qjs-core/api/: quickjs.c  quickjs.h
qjs-core/context/: context.c
qjs-core/include/: jsvalue.h  qjs-core.h  qjs-port.h  qjs-runtime.h  qjs.c  qjs.h  quickjs-libc.c  quickjs-libc.h  quickjs.c  quickjs.h
qjs-core/jcontext/: jcontext.c  jcontext.h
qjs-core/memory/: gc.c  gc.h  jmemory.c  jmemory.h  memory.c
qjs-core/parser/: jsdump.c  jsdump.h  lexer.c  lexer.h  scanner.c  scanner.h
qjs-core/runtime/: qjs-parser.c  qjs-parser.h  qjs-runtime.c
qjs-core/string/: atoms.c  atoms.h  jsstring.c  jsstring.h
qjs-main/: CMakeLists.txt  main-qjs.c
qjs-port/default/: CMakeLists.txt  default-fatal.c  qjs-port.c
qjs-port/default/include/: qjs-port-default.h
src/: config.h  ecma-array.c  ecma-array.h  ecma-arraybuffer.c  ecma-arraybuffer.h  ecma-bignumber.c  ecma-bignumber.h  ecma-class.c  ecma-class.h  ecma-collections.c  ecma-collections.h  ecma-dataview.c  ecma-dataview.h  ecma-function.c  ecma-function.h  ecma-global.c  ecma-global.h  ecma-iterator.c  ecma-iterator.h  ecma-modules.c  ecma-modules.h  ecma-object.c  ecma-object.h  ecma-regexp.c  ecma-regexp.h  ecma-symbol.c  ecma-symbol.h  ecma-type-conversion.c  ecma-type-conversion.h  ecma-typed-array.c  ecma-typed-array.h  ecma-typedarray.c  ecma-typedarray.h  ecma.h  front-json.c  front-json.h  front-lexer.c  front-lexer.h  front-parser-expr.c  front-parser-expr.h  (+58 more)
tests/unit-core/: CMakeLists.txt  test-common.h  test-jsstring.c  test-memory.c  test-scaffold.c
